@@ -32,7 +32,7 @@ import org.apache.ws.secpolicy.SP11Constants;
 import org.apache.ws.secpolicy.SPConstants;
 import org.apache.ws.secpolicy.model.UsernameToken;
 
-public class UsernameTokenBuilder implements AssertionBuilder<OMElement> {
+public class UsernameTokenBuilder implements AssertionBuilder {
 
     
     public Assertion build(OMElement element, AssertionBuilderFactory factory) throws IllegalArgumentException {
@@ -47,19 +47,19 @@ public class UsernameTokenBuilder implements AssertionBuilder<OMElement> {
         
         OMAttribute isOptional = element.getAttribute(Constants.Q_ELEM_OPTIONAL_ATTR);
 		if (isOptional != null) {
-			usernameToken.setOptional(Boolean.valueOf(isOptional.getAttributeValue())
-					.booleanValue());
+			usernameToken.setOptional((new Boolean(isOptional.getAttributeValue())
+					.booleanValue()));
 		} 
         
         OMElement policyElement = element.getFirstElement();
         
-        if (policyElement != null && policyElement.getQName().equals(org.apache.neethi.Constants.Q_ELEM_POLICY)) {
+        if (policyElement != null && !policyElement.getQName().equals(org.apache.neethi.Constants.Q_ELEM_POLICY)) {
         
             Policy policy = PolicyEngine.getPolicy(element.getFirstElement());
             policy = (Policy) policy.normalize(false);
             
-            for (Iterator<List<Assertion>> iterator = policy.getAlternatives(); iterator.hasNext();) {
-                processAlternative(iterator.next(), usernameToken);
+            for (Iterator iterator = policy.getAlternatives(); iterator.hasNext();) {
+                processAlternative((List) iterator.next(), usernameToken);
                 
                 /*
                  * since there should be only one alternative
@@ -75,10 +75,10 @@ public class UsernameTokenBuilder implements AssertionBuilder<OMElement> {
         return new QName[] {SP11Constants.USERNAME_TOKEN};
     }
 
-    private void processAlternative(List<Assertion> assertions, UsernameToken parent) {
+    private void processAlternative(List assertions, UsernameToken parent) {
                 
-        for (Iterator<Assertion> iterator = assertions.iterator(); iterator.hasNext();) {
-            Assertion assertion = iterator.next();
+        for (Iterator iterator = assertions.iterator(); iterator.hasNext();) {
+            Assertion assertion = (Assertion) iterator.next();
             QName qname = assertion.getName();
             
             if (SP11Constants.WSS_USERNAME_TOKEN10.equals(qname)) {
